# rgis

./: .gitignore  .gitmodules  0.bootstrap.js  1.bootstrap.js  CNAME  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html  index.js  index_js.bootstrap.js  vendors-node_modules_proj4_lib_index_js-node_modules_proj4js-definitions_proj4js-definitions_js.bootstrap.js
.github/: build.sh  publish.sh
.github/workflows/: build.yml
bevy-earcutr/: Cargo.toml  README.md
bevy-earcutr/src/: lib.rs
bevy-jobs/: Cargo.toml  README.md
bevy-jobs/src/: lib.rs
bevy-web-resizing/: Cargo.toml
bevy-web-resizing/src/: lib.rs
bevy_egui_window/: Cargo.toml
bevy_egui_window/src/: lib.rs
bevy_job_fetch/: Cargo.toml  README.md
bevy_job_fetch/src/: lib.rs
geo-bevy/: Cargo.toml
geo-bevy/src/: lib.rs  line_string.rs  point.rs  polygon.rs
geo-earcutr/: Cargo.toml
geo-earcutr/benches/: big_polygon.rs
geo-earcutr/src/: lib.rs
geo-features/: Cargo.toml
geo-features/src/: lib.rs
geo-file-loader/: Cargo.toml
geo-file-loader/src/: geojson.rs  geojson_loader.rs  geotiff.rs  gpx.rs  gpx_loader.rs  lib.rs  shapefile.rs  shapefile_loader.rs  wkt.rs  wkt_loader.rs
geo-fix-antimeridian/: Cargo.toml
geo-fix-antimeridian/src/: lib.rs
geo-geom-type/: Cargo.toml
geo-geom-type/src/: lib.rs
geo-lyon/: Cargo.toml
geo-lyon/src/: lib.rs
geo-proj-js/: Cargo.toml
geo-proj-js/src/: lib.rs
geo-projected/: Cargo.toml
geo-projected/src/: feature.rs  feature_collection.rs  lib.rs
geo-raster/: Cargo.toml
geo-raster/src/: geotiff.rs  lib.rs
geo-srs/: Cargo.toml
geo-srs/src/: lib.rs
geotiff-test-data/: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
rgis/: Cargo.toml  lib.rs
rgis-camera/: Cargo.toml
rgis-camera-events/: Cargo.toml
rgis-camera-messages/: Cargo.toml
rgis-camera/src/: fly_to.rs  keyboard.rs  lib.rs  systems.rs  utils.rs
rgis-cli/: Cargo.toml
rgis-cli/src/: lib.rs
rgis-crs/: Cargo.toml
rgis-crs-events/: Cargo.toml
rgis-crs-messages/: Cargo.toml
rgis-crs/src/: lib.rs
rgis-events/: Cargo.toml
rgis-events/src/: lib.rs
rgis-file-loader/: Cargo.toml
rgis-file-loader-events/: Cargo.toml
rgis-file-loader-messages/: Cargo.toml
rgis-file-loader/src/: geojson.rs  jobs.rs  lib.rs  lod_builder.rs  systems.rs  tasks.rs
rgis-geo-ops/: Cargo.toml
rgis-geo-ops/src/: convex_hull.rs  lib.rs  outliers.rs  rotate.rs  simplify.rs  smoothing.rs  triangulate.rs  unsigned_area.rs
rgis-geodesy/: Cargo.toml
rgis-geodesy/src/: lib.rs
rgis-grid/: Cargo.toml
rgis-keyboard/: Cargo.toml
rgis-keyboard/src/: lib.rs  systems.rs
rgis-layer-events/: Cargo.toml
rgis-layer-id/: Cargo.toml
rgis-layer-id/src/: lib.rs
rgis-layer-messages/: Cargo.toml
rgis-layers/: Cargo.toml
rgis-layers/src/: export.rs  lib.rs  systems.rs
rgis-library/: Cargo.toml
rgis-map-events/: Cargo.toml
rgis-map-messages/: Cargo.toml
rgis-mouse/: Cargo.toml
rgis-mouse/src/: lib.rs  systems.rs
rgis-network/: Cargo.toml
rgis-network/src/: lib.rs
rgis-primitives/: Cargo.toml
rgis-renderer/: Cargo.toml
rgis-renderer-events/: Cargo.toml
rgis-renderer-messages/: Cargo.toml
rgis-renderer/src/: fill_helper.rs  jobs.rs  lib.rs  line_helper.rs  line_material.rs  particles.rs  render_entity_index.rs  systems.rs  tasks.rs  thicken.rs  z_index.rs
rgis-renderer/src/mesh_conversion/: build_mesh.rs  line_string.rs  mod.rs  point.rs  polygon.rs
rgis-renderer/tests/: features_deselected_message_consumed.rs
rgis-settings/: Cargo.toml
rgis-task/: Cargo.toml
rgis-transform/: Cargo.toml
rgis-transform/src/: jobs.rs  lib.rs  proj_js_transformer.rs  proj_transformer.rs  systems.rs  tasks.rs
rgis-ui/: Cargo.toml
rgis-ui-events/: Cargo.toml
rgis-ui-messages/: Cargo.toml
rgis-ui/src/: add_layer_window.rs  bottom_panel.rs  change_crs_window.rs  debug_window.rs  events.rs  feature_properties_window.rs  lib.rs  log_buffer.rs  manage_layer_window.rs  message_window.rs  operation_window.rs  save_file.rs  scale_bar.rs  side_panel.rs  systems.rs  tiles.rs  top_panel.rs  welcome_window.rs  widget_registry.rs  window.rs
rgis-ui/src/panels/: bottom.rs  bottom_panel.rs  mod.rs  side.rs  side_panel.rs  top.rs  top_panel.rs
rgis-ui/src/systems/: event_handlers.rs  measure.rs  mod.rs  panels.rs  windows.rs
rgis-ui/src/ui_helpers/: crs_validator.rs  library_helpers.rs  mod.rs
rgis-ui/src/widgets/: add_layer.rs  add_layer_button.rs  crs_input.rs  debug_table.rs  exit.rs  exit_button.rs  feature_properties_table.rs  fill_color.rs  fill_color_widget.rs  full_screen.rs  full_screen_button.rs  mod.rs  move_up_move_down.rs  move_up_move_down_widget.rs  operations.rs  operations_widget.rs  point_size.rs  scale_bar.rs  stroke_color.rs  stroke_color_widget.rs  stroke_width.rs  toggle_layer.rs  toggle_layer_widget.rs  zoom_buttons.rs
rgis-ui/src/windows/: add_layer.rs  add_layer_window.rs  attribute_table.rs  change_crs.rs  change_crs_window.rs  debug.rs  debug_window.rs  feature_properties.rs  feature_properties_window.rs  logs.rs  manage_layer.rs  manage_layer_window.rs  message.rs  message_window.rs  mod.rs  operation.rs  operation_window.rs  welcome.rs  welcome_window.rs
rgis-ui/src/windows/add_layer/: by_file.rs  by_text.rs  file.rs  library.rs  mod.rs
rgis-units/: Cargo.toml
rgis-units/src/: lib.rs
rgis/assets/shaders/: line.wgsl
rgis/src/: lib.rs  line_string_mesh_builder.rs  main.rs  mouse.rs  plugins.rs  ui.rs  window.rs
rgis/src/canvas/: mod.rs  to_canvas_path.rs
rgis/src/event_loop/: context.rs  mod.rs
rgis/src/file_loader/: geojson.rs  mod.rs
rgis/src/plugins/: mod.rs  rgis_camera.rs  ui.rs
sample-data/: mexico-line-string.geojson  mexico.geojson  polygon-holes.geojson
src/: cli.rs  color.rs  event_loop.rs  file_loader.rs  layer.rs  lla_to_ecef.rs  main.rs  render.rs  renderable.rs  window.rs
test-data/: sample.tif
time-logger/: Cargo.toml
transform/: Cargo.toml
typed-num/: Cargo.toml
www/: .gitignore  index.html  index.js  package-lock.json  package.json  playwright.config.ts  webpack.config.js
(+112 files in other folders)
