[workspace]
members = [
    "geo-features",
    "geo-geom-type",
    "geo-projected",
    "rgis-camera",
    "rgis-cli",
    "rgis-file-loader",
    "rgis-ui-events",
    "rgis-camera-events",
    "rgis-layer-events",
    "rgis-map-events",
    "rgis-file-loader-events",
    "rgis-crs-events",
    "rgis-renderer-events",
    "rgis-geo-ops",
    "rgis-keyboard",
    "rgis-layers",
    "rgis-library",
    "rgis-mouse",
    "rgis-renderer",
    "rgis-settings",
    "rgis-ui",
    "rgis-units",
    "rgis",
    "rgis-crs",
    "rgis-primitives",
    "rgis-geodesy",
    "bevy_egui_window",
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"
cast_lossless = "warn"
unimplemented = "warn"
indexing_slicing = "warn"
expect_used = "warn"

[workspace.package]
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
publish = false

[workspace.dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "wayland",
    "png",
] }
bevy_egui = "0.35"
bevy_jobs = { git = "https://github.com/frewsxcv/bevy_jobs" }
bevy_jobs_fetch = { git = "https://github.com/frewsxcv/bevy_jobs" }
bevy_log = "0.16"
bitflags = "2"
bytes = "1"
clap = { version = "4", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "wrap_help",
] }
colorous = "1"
crs-definitions = "0.3"
dark-light = "2.0"
egui_plot = "0.32"
geo = "0.31"
geo-bevy = "9"
geo-geodesy = "5"
geodesy = "0.14"
geozero = { git = "https://github.com/georust/geozero.git", branch = "main" }
num-t = "4"
rfd = "0.15"
wasm-bindgen = "0.2"

[profile.release]
debug = true
# https://github.com/rustwasm/wasm-bindgen/issues/4211
strip = true

# https://github.com/rustwasm/wasm-bindgen/issues/4211
[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }
dbase = { git = "https://github.com/tmontaigu/dbase-rs.git" }       # https://github.com/tmontaigu/dbase-rs/commit/be4372bd28c9de97531b00099872dcb86e16c1ce
