[workspace]
members = [
    "geo-features",
    "geo-fix-antimeridian",
    "geo-geom-type",
    "geo-projected",
    "geo-raster",
    "rgis-camera",
    "rgis-cli",
    "rgis-file-loader",
    "rgis-ui-messages",
    "rgis-events",
    "rgis-geo-ops",
    "rgis-grid",
    "rgis-layers",
    "rgis-library",
    "rgis-mouse",
    "rgis-renderer",
    "rgis-settings",
    "rgis-ui",
    "rgis-units",
    "rgis",
    "rgis-crs",
    "rgis-primitives",
    "bevy_egui_window",
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "warn"
cast_lossless = "warn"
unimplemented = "warn"
indexing_slicing = "warn"
expect_used = "warn"

[workspace.package]
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
publish = false

[workspace.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_state",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_ui",
    "bevy_picking",
    "wayland",
    "png",
] }
bevy_egui = { git = "https://github.com/frewsxcv/bevy_egui", branch = "integrate-egui-wgpu" }
bevy_jobs = { git = "https://github.com/frewsxcv/bevy_jobs", rev = "7b412d4ea7f0b7ed65ed7c4e3c8145d59c0df03e" }
bevy_jobs_fetch = { git = "https://github.com/frewsxcv/bevy_jobs", rev = "7b412d4ea7f0b7ed65ed7c4e3c8145d59c0df03e" }
bevy_log = "0.18"
bitflags = "2"
bytes = "1"
clap = { version = "4", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "wrap_help",
] }
colorous = "1"
crs-definitions = "0.4"
dark-light = "2.0"
geo = "0.32"
geo-bevy = "10"
geo-geodesy = "8"
geodesy = "0.15"
geozero = { git = "https://github.com/georust/geozero.git", branch = "main" }
num-t = "5"
rfd = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
geo-types = "0.7"
getrandom = { version = "0.2", features = ["js"] }
async-tiff = { git = "https://github.com/developmentseed/async-tiff", default-features = false, features = ["lzma"] }
async-trait = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"

[profile.release]
debug = true
strip = true

[patch.crates-io]
dbase = { git = "https://github.com/tmontaigu/dbase-rs.git" }       # https://github.com/tmontaigu/dbase-rs/commit/be4372bd28c9de97531b00099872dcb86e16c1ce
