[package]
name = "bevy_job_fetch"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
bevy_jobs = { workspace = true, features = ["tokio"] }
thiserror = { workspace = true }
