[package]
name = "geo-bevy"
version = "0.0.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "png",
] }
bevy-earcutr = "0.3"
geo = "0.19"
