[package]
name = "geo-earcutr"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2018"
publish = false

[dependencies]
geo-types = "0.6"
earcutr = { git = "https://github.com/donbright/earcutr.git" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "big_polygon"
harness = false
