[package]
name = "geo-file-loader"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
geo = "0.30"
geoarrow = { git = "https://github.com/geoarrow/geoarrow-rs.git" }
wkb = "0.8"
arrow-array = "55"                                                 # Use a compatible version
arrow-schema = "55"                                                # Use a compatible version
serde_json = "1"                                                   # Use a compatible version
# geozero = { version = "0.14", features = ["with-wkt", "with-gpx", "with-shp"] }
geozero = { git = "https://github.com/georust/geozero.git", branch = "cfarwell-B63F84F8-CC7B-4BA2-A5AC-18248CE4616E", features = [
    "with-wkt",
    "with-gpx",
    "with-shp",
] }
