[package]
name = "geo-file-loader"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
geo = "0.30"
geozero = { git = "https://github.com/georust/geozero.git", branch = "main", features = [
    "with-wkt",
    "with-gpx",
    "with-shp",
] }
geotiff = "0.1.0"
geo-raster = { path = "../geo-raster" }
geo-types = "0.7.10"
tiff = "0.9.1"
