[package]
name = "geo-raster"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
geo-types = { workspace = true }
async-tiff = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
