[package]
name = "rgis-camera"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
geo = { workspace = true }
geo-projected = { path = "../geo-projected" }
rgis-camera-messages = { path = "../rgis-camera-messages" }
rgis-crs-messages = { path = "../rgis-crs-messages" }
rgis-renderer-messages = { path = "../rgis-renderer-messages" }
rgis-layers = { path = "../rgis-layers" }
geo-geodesy = { workspace = true }
rgis-units = { path = "../rgis-units" }
rgis-geodesy = { path = "../rgis-geodesy" }
