[package]
name = "rgis-camera"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
geo = { workspace = true }
geo-projected = { path = "../geo-projected" }
rgis-events = { path = "../rgis-events" }
rgis-layers = { path = "../rgis-layers" }
geo-geodesy = { workspace = true }
rgis-units = { path = "../rgis-units" }
rgis-geodesy = { path = "../rgis-geodesy" }
