[package]
name = "rgis-cli"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
    "bevy_gltf",
    "bevy_winit",
    "render",
] }
clap = "3"
