[package]
name = "rgis-crs"
version.workspace = true
edition = "2021"
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
geodesy = { workspace = true }
crs-definitions = { workspace = true }
rgis-crs-messages = { path = "../rgis-crs-messages" }
rgis-primitives = { path = "../rgis-primitives" }
