[package]
name = "rgis-events"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bytes = { workspace = true }
geo = { workspace = true }
geo-features = { path = "../geo-features", version = "0.1.0" }
geo-file-loader = { path = "../geo-file-loader", version = "0.1.0" }
geo-projected = { path = "../geo-projected", version = "0.1.0" }
rgis-primitives = { path = "../rgis-primitives", version = "0.1.0" }
