[package]
name = "rgis-events"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
bytes = { workspace = true }
geo = { workspace = true }
geo-features = { path = "../geo-features" }
geo-file-loader = { path = "../geo-file-loader" }
geo-projected = { path = "../geo-projected" }
rgis-primitives = { path = "../rgis-primitives" }
