[package]
name = "rgis-file-loader"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
geo-features = { path = "../geo-features" }
geo-file-loader = { path = "../geo-file-loader" }
geo-projected = { path = "../geo-projected" }
rgis-file-loader-events = { path = "../rgis-file-loader-events" }
rgis-layer-events = { path = "../rgis-layer-events" }
bevy_jobs = { workspace = true }
bevy_jobs_fetch = { workspace = true }
serde_json = { workspace = true }
time-logger = { path = "../time-logger" }
bytes = { workspace = true }
rgis-primitives = { path = "../rgis-primitives" }
