[package]
name = "rgis-file-loader"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
geo-features = { path = "../geo-features" }
geo-file-loader = { path = "../geo-file-loader" }
geo-fix-antimeridian = { path = "../geo-fix-antimeridian" }
geo-projected = { path = "../geo-projected" }
geo-raster = { path = "../geo-raster" }
rgis-file-loader-messages = { path = "../rgis-file-loader-messages" }
rgis-layer-messages = { path = "../rgis-layer-messages" }
bevy_jobs = { workspace = true }
bevy_jobs_fetch = { workspace = true }
bytes = { workspace = true }
rgis-geodesy = { path = "../rgis-geodesy" }
rgis-primitives = { path = "../rgis-primitives" }
rgis-ui-messages = { path = "../rgis-ui-messages" }
