[package]
name = "rgis-file-loader"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
arrow = { version = "58", default-features = false }
bevy = { workspace = true }
geo-features = { path = "../geo-features" }
geo-file-loader = { path = "../geo-file-loader" }
geo-projected = { path = "../geo-projected" }
geo-raster = { path = "../geo-raster" }
rgis-events = { path = "../rgis-events" }
bevy_jobs = { workspace = true }
bevy_jobs_fetch = { workspace = true }
bytes = { workspace = true }
rgis-crs = { path = "../rgis-crs" }
rgis-primitives = { path = "../rgis-primitives" }
rgis-ui-messages = { path = "../rgis-ui-messages" }
