[package]
name = "rgis-geo-ops"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy_egui = "0.35"
geo = "0.30"
geo-features = { path = "../geo-features" }
geo-geom-type = { path = "../geo-geom-type" }
geo-projected = { path = "../geo-projected" }
num-t = { version = "3", features = ["geo", "float_next_after"] }
