[package]
name = "rgis-geo-ops"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy_egui = { workspace = true }
geo = { workspace = true }
geo-features = { path = "../geo-features", version = "0.1.0" }
geo-geom-type = { path = "../geo-geom-type", version = "0.1.0" }
geo-projected = { path = "../geo-projected", version = "0.1.0" }
num-t = { workspace = true, features = ["geo", "float_next_after"] }
