[package]
name = "rgis-geo-ops"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy_egui = { workspace = true }
geo = { workspace = true }
geo-features = { path = "../geo-features" }
geo-geom-type = { path = "../geo-geom-type" }
geo-projected = { path = "../geo-projected" }
num-t = { workspace = true, features = ["geo", "float_next_after"] }
