[package]
name = "rgis-keyboard"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
    # "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_winit",
    "render",
] }
rgis-camera = { path = "../rgis-camera" }
rgis-events = { path = "../rgis-events" }
