[package]
name = "rgis-keyboard"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "wayland",
    "png",
] }
rgis-events = { path = "../rgis-events" }
