[package]
name = "rgis-layers"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
colorous = { workspace = true }
geo-features = { path = "../geo-features" }
geo-geom-type = { path = "../geo-geom-type" }
geo-projected = { path = "../geo-projected" }
rgis-layer-events = { path = "../rgis-layer-events" }
rgis-renderer-events = { path = "../rgis-renderer-events" }
rgis-ui-events = { path = "../rgis-ui-events" }
rgis-map-events = { path = "../rgis-map-events" }
rgis-primitives = { path = "../rgis-primitives" }
geo = { workspace = true }
rgis-crs = { path = "../rgis-crs" }
