[package]
name = "rgis-layers"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
colorous = { workspace = true }
geo-features = { path = "../geo-features" }
geo-geom-type = { path = "../geo-geom-type" }
geo-projected = { path = "../geo-projected" }
geo-raster = { path = "../geo-raster" }
rgis-layer-messages = { path = "../rgis-layer-messages" }
rgis-renderer-messages = { path = "../rgis-renderer-messages" }
rgis-ui-messages = { path = "../rgis-ui-messages" }
rgis-primitives = { path = "../rgis-primitives" }
geo = { workspace = true }
rgis-crs = { path = "../rgis-crs" }
