[package]
name = "rgis-layers"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
colorous = { workspace = true }
geo-features = { path = "../geo-features" }
geo-geom-type = { path = "../geo-geom-type" }
geo-projected = { path = "../geo-projected" }
geo-raster = { path = "../geo-raster" }
rgis-events = { path = "../rgis-events" }
rgis-ui-messages = { path = "../rgis-ui-messages" }
rgis-primitives = { path = "../rgis-primitives" }
geo = { workspace = true }
geozero = { workspace = true }
rgis-crs = { path = "../rgis-crs" }
