[package]
name = "rgis-mouse"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
geo = { workspace = true }
geo-projected = { path = "../geo-projected" }
rgis-events = { path = "../rgis-events" }
rgis-settings = { path = "../rgis-settings" }
rgis-units = { path = "../rgis-units" }
num-t = { workspace = true }
