[package]
name = "rgis-network"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "wayland",
    "png",
] }
bytes = "1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
bevy_jobs = { git = "https://github.com/frewsxcv/bevy_jobs", features = [
    "tokio",
] }
thiserror = "2"
