[package]
name = "rgis-renderer"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
geo = { workspace = true }
geo-bevy = { workspace = true }
geo-projected = { path = "../geo-projected" }
geo-geom-type = { path = "../geo-geom-type" }
geo-raster = { path = "../geo-raster" }
rgis-events = { path = "../rgis-events" }
rgis-primitives = { path = "../rgis-primitives" }
rgis-layers = { path = "../rgis-layers" }
rgis-settings = { path = "../rgis-settings" }
rgis-ui-messages = { path = "../rgis-ui-messages" }
bevy_egui = { workspace = true }
bevy_jobs = { workspace = true }
num-t = { workspace = true }
