[package]
name = "rgis-transform"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
geo-features = { path = "../geo-features", version = "0.1.0" }
geo-projected = { path = "../geo-projected", version = "0.1.0" }
geo = { workspace = true }
rgis-events = { path = "../rgis-events", version = "0.1.0" }
rgis-primitives = { path = "../rgis-primitives", version = "0.1.0" }
rgis-layers = { path = "../rgis-layers", version = "0.1.0" }
rgis-settings = { path = "../rgis-settings", version = "0.1.0" }
bevy_jobs = { workspace = true }
geo-geodesy = { workspace = true }
num-t = { workspace = true }
rgis-crs = { path = "../rgis-crs", version = "0.1.0" }
rgis-geodesy = { path = "../rgis-geodesy", version = "0.1.0" }
