[package]
name = "rgis-transform"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
geo-features = { path = "../geo-features" }
geo-projected = { path = "../geo-projected" }
geo = { workspace = true }
rgis-layer-messages = { path = "../rgis-layer-messages" }
rgis-crs-messages = { path = "../rgis-crs-messages" }
rgis-primitives = { path = "../rgis-primitives" }
rgis-layers = { path = "../rgis-layers" }
rgis-settings = { path = "../rgis-settings" }
bevy_jobs = { workspace = true }
crs-definitions = { workspace = true }
geo-geodesy = { workspace = true }
geodesy = { workspace = true }
num-t = { workspace = true }
rgis-crs = { path = "../rgis-crs" }
rgis-geodesy = { path = "../rgis-geodesy" }
