[package]
name = "rgis-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui_plot = { workspace = true }
bevy_egui_window = { path = "../bevy_egui_window" }
geo-features = { path = "../geo-features" }
geo-file-loader = { path = "../geo-file-loader" }
geo-geom-type = { path = "../geo-geom-type" }
geo-projected = { path = "../geo-projected" }
dark-light = { workspace = true }
rfd = { workspace = true }
rgis-geo-ops = { path = "../rgis-geo-ops" }
rgis-primitives = { path = "../rgis-primitives" }
rgis-layers = { path = "../rgis-layers" }
rgis-library = { path = "../rgis-library" }
rgis-ui-events = { path = "../rgis-ui-events" }
rgis-camera-events = { path = "../rgis-camera-events" }
rgis-layer-events = { path = "../rgis-layer-events" }
rgis-map-events = { path = "../rgis-map-events" }
rgis-file-loader-events = { path = "../rgis-file-loader-events" }
rgis-crs-events = { path = "../rgis-crs-events" }
rgis-mouse = { path = "../rgis-mouse" }
rgis-settings = { path = "../rgis-settings" }
rgis-units = { path = "../rgis-units" }
bevy_jobs = { workspace = true }
geo = { workspace = true }
geodesy = { workspace = true }
rgis-crs = { path = "../rgis-crs" }
rgis-geodesy = { path = "../rgis-geodesy" }
