[package]
name = "rgis-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
egui_plot = { workspace = true }
bevy_egui_window = { path = "../bevy_egui_window" }
geo-features = { path = "../geo-features" }
geo-file-loader = { path = "../geo-file-loader" }
geo-geom-type = { path = "../geo-geom-type" }
geo-projected = { path = "../geo-projected" }
dark-light = { workspace = true }
rfd = { workspace = true }
rgis-geo-ops = { path = "../rgis-geo-ops" }
rgis-primitives = { path = "../rgis-primitives" }
rgis-layers = { path = "../rgis-layers" }
rgis-library = { path = "../rgis-library" }
rgis-ui-messages = { path = "../rgis-ui-messages" }
rgis-camera-messages = { path = "../rgis-camera-messages" }
rgis-layer-messages = { path = "../rgis-layer-messages" }
rgis-map-messages = { path = "../rgis-map-messages" }
rgis-file-loader-messages = { path = "../rgis-file-loader-messages" }
rgis-crs-messages = { path = "../rgis-crs-messages" }
rgis-mouse = { path = "../rgis-mouse" }
rgis-settings = { path = "../rgis-settings" }
rgis-units = { path = "../rgis-units" }
bevy_jobs = { workspace = true }
geo = { workspace = true }
geodesy = { workspace = true }
rgis-crs = { path = "../rgis-crs" }
geo-geodesy = { workspace = true }
