[package]
name = "rgis"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_jobs = { workspace = true }
geo = { workspace = true }
rgis-camera = { path = "../rgis-camera" }
rgis-camera-messages = { path = "../rgis-camera-messages" }
rgis-crs = { path = "../rgis-crs" }
rgis-crs-messages = { path = "../rgis-crs-messages" }
rgis-file-loader = { path = "../rgis-file-loader" }
rgis-file-loader-messages = { path = "../rgis-file-loader-messages" }
rgis-geodesy = { path = "../rgis-geodesy" }
rgis-layer-messages = { path = "../rgis-layer-messages" }
rgis-layers = { path = "../rgis-layers" }
rgis-map-messages = { path = "../rgis-map-messages" }
rgis-mouse = { path = "../rgis-mouse" }
rgis-renderer = { path = "../rgis-renderer" }
rgis-renderer-messages = { path = "../rgis-renderer-messages" }
rgis-settings = { path = "../rgis-settings" }
rgis-transform = { path = "../rgis-transform" }
rgis-ui = { path = "../rgis-ui" }
rgis-ui-messages = { path = "../rgis-ui-messages" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rgis-cli = { path = "../rgis-cli" }
bevy = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
bevy = { workspace = true, features = ["webgl2"] }
getrandom = { workspace = true }
