[package]
name = "rgis"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { workspace = true }
bevy_jobs = { workspace = true }
geo = { workspace = true }
rgis-camera = { path = "../rgis-camera" }
rgis-crs = { path = "../rgis-crs" }
rgis-events = { path = "../rgis-events" }
rgis-file-loader = { path = "../rgis-file-loader" }
rgis-grid = { path = "../rgis-grid" }
rgis-layers = { path = "../rgis-layers" }
rgis-mouse = { path = "../rgis-mouse" }
rgis-primitives = { path = "../rgis-primitives" }
rgis-renderer = { path = "../rgis-renderer" }
rgis-settings = { path = "../rgis-settings" }
rgis-transform = { path = "../rgis-transform" }
rgis-ui = { path = "../rgis-ui" }
rgis-ui-messages = { path = "../rgis-ui-messages" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rgis-cli = { path = "../rgis-cli" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
bevy = { workspace = true, features = ["webgl2"] }
getrandom = { workspace = true }
